--- a/assets/themes/hooligan/css/style.css
+++ b/assets/themes/hooligan/css/style.css
@@ -1,4 +1,4 @@
-@import url(http://fonts.googleapis.com/css?family=Advent+Pro);
+@import url(http://fonts.googleapis.com/css?family=Marcellus+SC);
 @import url(http://fonts.googleapis.com/css?family=Oxygen);
 /* Partials */
 /* Theme Vars */
@@ -25,7 +25,7 @@ h1, h2, h3, h4, h5, h6 {
   font-weight: normal;
   color: #999;
   text-rendering: optimizelegibility;
-  font-family: 'Advent Pro', sans-serif;
+  font-family: 'Marcellus SC', serif;
   /*font-family: 'Pontano Sans', sans-serif;*/
 }
 
